package sprites;

public enum Direction {
    UP,RIGHT,DOWN,LEFT;
}
