@startuml

title __JPACMAN's Class Diagram__\n

    /' namespace frameManagers {
      class frameManagers.FrameManager {
      }
    }
    namespace frameManagers {
      class frameManagers.GhostFrameManager {
      }
    }
    namespace frameManagers {
      class frameManagers.PacmanFrameManager {
      }
    }
    namespace keylisteners {
      class keylisteners.GameEventListener {
      }
    }
    namespace keylisteners {
      class keylisteners.PauseEventListener {
      }
    } '/
    namespace logic {
      class logic.GameLogic {
      }
    }
    namespace logic {
      class logic.MainFrameLogic {
      }
    }
    namespace logic {
      class logic.MenuLogic {
      }
    }
    /' namespace loops {
      class loops.GameLoop {
      }
    }
    namespace loops {
      class loops.GhostLoop {
      }
    }
    namespace loops {
      class loops.PacmanLoop {
      }
    } '/
    namespace sprites {
      class sprites.Blinky {
      }
    }
    namespace sprites {
      abstract class sprites.Character {
      }
    }
    namespace sprites {
      class sprites.Clyde {
      }
    }
    namespace sprites {
      enum Direction {
      }
    }
    namespace sprites {
      class sprites.Fruit {
      }
    }
    namespace sprites {
      abstract class sprites.Ghost {
      }
    }
    namespace sprites {
      class sprites.Inky {
      }
    }
    namespace sprites {
      class sprites.Pacman {
      }
    }
    namespace sprites {
      class sprites.Pill {
      }
    }
    namespace sprites {
      class sprites.Pinky {
      }
    }
    namespace sprites {
      class sprites.Portal {
      }
    }
    namespace sprites {
      class sprites.PowerPill {
      }
    }
    namespace sprites {
      abstract class sprites.Sprite {
      }
    }
    namespace structure {
      class structure.Maze {
      }
    }
    namespace structure {
      class structure.MazeManager {
      }
    }
    namespace ui {
      class ui.BGPanel {
      }
    }
    namespace ui {
      class ui.GameMainFrame {
      }
    }
    namespace ui {
      class ui.GamePanel {
      }
    }
    namespace ui {
      class ui.MenuPanel {
      }
    }
    namespace ui {
      class ui.PausePanel {
      }
    }
  

  ' frameManagers.GhostFrameManager -up-|> frameManagers.FrameManager
  ' frameManagers.PacmanFrameManager -up-|> frameManagers.FrameManager
  logic.GameLogic o-- structure.Maze : maze
  logic.GameLogic o-- sprites.Pacman : pacman
  logic.GameLogic o-- sprites.Ghost : ghosts
  ' loops.GameLoop o-- logic.GameLogic : gameLogic
  ' loops.PacmanLoop o-- sprites.Pacman : pacman
  sprites.Blinky -up-|> sprites.Ghost
  sprites.Character -up-|> sprites.Sprite
  sprites.Clyde -up-|> sprites.Ghost
  sprites.Fruit -up-|> sprites.Sprite
  sprites.Ghost -up-|> sprites.Character
  ' sprites.Ghost o-- frameManagers.GhostFrameManager : frameManager
  ' sprites.Ghost o-- loops.GhostLoop : ghostLoop
  sprites.Ghost o-- sprites.Pacman : pacman
  sprites.Inky -up-|> sprites.Ghost
  sprites.Inky o-- sprites.Blinky : blinky
  sprites.Pacman -up-|> sprites.Character
  ' sprites.Pacman o-- frameManagers.PacmanFrameManager : frameManager
  sprites.Pill -up-|> sprites.Sprite
  sprites.Pinky -up-|> sprites.Ghost
  sprites.Portal -up-|> sprites.Sprite
  sprites.Portal o-- sprites.Portal : other
  sprites.PowerPill -up-|> sprites.Sprite
  sprites.Sprite o-- sprites.Direction : dir
  structure.Maze o-- sprites.Portal : bluePortal / redPortal
  structure.Maze o-- sprites.Pill : pills
  structure.Maze o-- sprites.Fruit : fruit
  structure.Maze o-- sprites.PowerPill : powerPills
  ui.GameMainFrame o-- ui.BGPanel : bgPanel
  ui.GameMainFrame o-- ui.GamePanel : gamePanel
  ui.GameMainFrame o-- ui.MenuPanel : menuPanel
  ui.GameMainFrame o-- ui.PausePanel : pausePanel
  ui.GameMainFrame o-- logic.MainFrameLogic : logic
  ' ui.GamePanel o-- keylisteners.GameEventListener : gameEventListener
  ui.GamePanel o-- logic.GameLogic : logic
  ui.MenuPanel o-- logic.MenuLogic : logic
  ' ui.PausePanel o-- keylisteners.PauseEventListener : pauseEventListener




@enduml
